update filter, add refresh-icon

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,7 +20,7 @@
           <div  style="display: flex;flex-direction: row;justify-content: space-between;align-items: center;">
             
             <!-- <input class="form-control me-2 input-sreach col-1" type="search" placeholder="NƠI CẦN ĐẾN" aria-label="Search" name="date_flight" value="" [(ngModel)]="departure"> -->
-            <select class="form-control me-2" name="arrival-location" id="arrival-location" style="height: 40px;"
+            <select class="form-control me-2 input-select" name="arrival-location" id="arrival-location" style="height: 40px;"
             [(ngModel)]="departure">
               <option value="" id=""></option>
               <option value="VIETNAM" id="VN">Việt Nam</option>
@@ -34,7 +34,7 @@
               <option value="HONGKONG" id="HK">Hồng Kông</option>
               <option value="HANQUOC" id="KR">Hàn Quốc</option>
             </select>
-            <select class="form-control me-2" name="arrival-location" id="arrival-location" style="height: 40px;"
+            <select class="form-control me-2 input-select" name="arrival-location" id="arrival-location" style="height: 40px;"
             [(ngModel)]="destination">
               <option value="" id=""></option>
               <option value="VIETNAM" id="VN">Việt Nam</option>
