--- a/src/app/pages/booking-ticket/booking-ticket.component.html
+++ b/src/app/pages/booking-ticket/booking-ticket.component.html
@@ -290,7 +290,7 @@
       <form [formGroup]="form">
         <!-- Điểm xuất phát bắt đầu -->
         <button id="resetButton" style="width:40px;height:40px;background-color:#146C94;border:2px solid #146C94; border-radius:5px; margin: 20px"
-        class="ms-2 mt-2" (click)="reloadValue($event)">
+        class="ms-2 mt-2" (click)="reloadValue()">
           <img src="assets/Icon/refresh-icon.png" alt="Reset" style="width:20px;height:20px"/>
         </button>
         <h2 class="color-2 ms-2 mt-2 fw-bold" style="font-size: 20px">
