--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -22,7 +22,7 @@
             <!-- <input class="form-control me-2 input-sreach col-1" type="search" placeholder="NƠI CẦN ĐẾN" aria-label="Search" name="date_flight" value="" [(ngModel)]="departure"> -->
             <select class="form-control me-2 input-select" name="arrival-location" id="arrival-location" style="height: 40px;"
             [(ngModel)]="departure">
-              <option value="" id=""></option>
+              <option value="" id="">Nơi đi</option>
               <option value="VIETNAM" id="VN">Việt Nam</option>
               <option value="THAILAN" id="TH">Thái Lan</option>
               <option value="ANH" id="UK">Anh</option>
@@ -36,7 +36,7 @@
             </select>
             <select class="form-control me-2 input-select" name="arrival-location" id="arrival-location" style="height: 40px;"
             [(ngModel)]="destination">
-              <option value="" id=""></option>
+              <option value="" id="">Nơi đến</option>
               <option value="VIETNAM" id="VN">Việt Nam</option>
               <option value="THAILAN" id="TH">Thái Lan</option>
               <option value="ANH" id="UK">Anh</option>
