--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -29,7 +29,7 @@
     background-size: cover;
     
 }
-.input-date,.input-sreach{
+.input-date,.input-sreach,.input-select{
 
     font-size: 20px;
     color:#146C94 !important;
