--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="login-container" [formGroup]="form">
         <h1 style="margin-bottom: 40px;">ĐĂNG NHẬP</h1>
             <div class="form-group">
-                <label>TÀI KHOẢN</label>
+                <label>TÊN TÀI KHOẢN</label>
                 <input type="text" name="user_name" id="username-container" placeholder="Nhập tài khoản của bạn vào đây" formControlName="taiKhoan1">
             </div>
             <div class="form-group">
