--- a/src/app/pages/view-profile/view-profile.component.html
+++ b/src/app/pages/view-profile/view-profile.component.html
@@ -21,7 +21,7 @@
               <div class="col-md-6">
                 <!-- Input Username -->
                 <label for="inputUsername" class="form-label">Tên tài khoản</label>
-                <input type="text" class="form-control" id="inputUsername" formControlName="Makhachhang">
+                <input type="text" class="form-control" id="inputUsername" formControlName="TenTaiKhoan" readonly="readonly">
                 <!-- Input Ho ten -->
                 <label for="inputName" class="form-label">Họ và tên</label>
                 <input type="text" class="form-control" id="inputName" placeholder="Tên khách hàng" formControlName="HoTenKh">
@@ -44,7 +44,7 @@
                 <div class="row">
                 <div class="col-md-8"></div>
                 <div class="col-md-4 button">
-                  <button class="button-submit">LƯU</button>
+                  <button class="button-submit" (click)="updateInfo()">LƯU</button>
                 </div>
                
                   
