--- a/src/app/pages/view-profile/view-profile.component.html
+++ b/src/app/pages/view-profile/view-profile.component.html
@@ -25,20 +25,49 @@
                 <!-- Input Ho ten -->
                 <label for="inputName" class="form-label">Họ và tên</label>
                 <input type="text" class="form-control" id="inputName" placeholder="Tên khách hàng" formControlName="HoTenKh">
+                <div *ngIf="form.get('HoTenKh').hasError('required') && form.get('HoTenKh').touched" style="color: red; margin-top: 10px;margin-left: 10px">
+                  Không được để trống
+                </div>
                 <!-- Input Gmaiil -->
                 <label for="inputEmail3" class="form-label">Gmail</label>
                 <input type="text" class="form-control" id="inputEmail3" placeholder="abc@gmail.com" formControlName="GmailKh">
-                
+                <div *ngIf="form.get('GmailKh').hasError('required') && form.get('GmailKh').touched">
+                  Không được để trống
+                </div>
+                <div *ngIf="form.get('GmailKh').hasError('email') && form.get('GmailKh').touched">
+                  Email không hợp lệ
+                </div>
+
               </div>
             <!-- Col ben phai -->
               <div class="col-md-6">
                 <!-- Input Gioi Tinh -->
                 <label for="inputGender" class="form-label">Giới tính</label>
-                <input type="text" class="" id="inputGender" placeholder="Nam" formControlName="Phai">
+                <!-- <input type="text" class="" id="inputGender" placeholder="Nam" formControlName="Phai"> -->
+                <select class="form-control" id="inputGender" formControlName="Phai">
+                  <option value="Nam">Nam</option>
+                  <option value="Nữ">Nữ</option>
+                </select>
                 <!-- Input so dien thoai -->
                 <label for="inputTel" class="form-label">Số điện thoại</label>
-                <input type="tel" class="" id="inputTel" formControlName="Sdt">
-                
+                <input type="text" class="" id="inputTel" formControlName="Sdt">
+
+                <!-- validate sdt -->
+                <div style="color: red; margin-top: 10px;margin-left: 10px">
+                <div *ngIf="form.get('Sdt').hasError('required') && form.get('Sdt').touched">
+                  Không được để trống
+                </div>
+                <div *ngIf="form.get('Sdt').hasError('pattern') && form.get('Sdt').touched">
+                  Số điện thoại không hợp lệ (chỉ được nhập số)
+                </div>
+                <div *ngIf="form.get('Sdt').hasError('minlength') && form.get('Sdt').touched">
+                  Số điện thoại không được ngắn hơn 9 số
+                </div>
+                <div *ngIf="form.get('Sdt').hasError('maxlength') && form.get('Sdt').touched">
+                  Số điện thoại không được dài hơn 11 số
+                </div>
+              </div>
+
               </div>
               <div>
                 <div class="row">
