--- a/src/app/pages/view-profile/view-profile.component.scss
+++ b/src/app/pages/view-profile/view-profile.component.scss
@@ -13,6 +13,15 @@ input{
       font-size:14px;
 }
 
+select{
+  width: 100%;
+      border: 2px solid #146C94;
+      height: 54px;
+      padding: 0 15px;
+      border-radius: 15px;
+      font-size:14px;
+}
+
 h1 {
   color: #146C94;
   font-weight: bold;
