--- a/src/app/pages/statistical/statistical.component.scss
+++ b/src/app/pages/statistical/statistical.component.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     text-decoration: none;
     color: #146C94;
-    font-size: 18px;
+    font-size: 23px;
 }
 
 form{
@@ -102,5 +102,9 @@ h2{
         justify-content: center;
         align-items: center;
     }
+}
+.detail{
+    font-size: 20px;
+    color: #19A7CE !important;
 }
 // ----------------------------------------------------------------------------
