--- a/src/app/pages/new-account/new-account.component.scss
+++ b/src/app/pages/new-account/new-account.component.scss
@@ -1,5 +1,4 @@
 * {
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
@@ -15,8 +14,7 @@
     width: 100%;
     display: inline-block;
     position: relative;
-    padding: 30px;
-    margin: 20px;
+    margin: 50px 50px 0px 50px;
 }
 .page-title {
     text-align: center;
